<resources>
    <string name="app_name" translatable="false">Headphone Listener</string>

    <string name="service_started">Service started!</string>
    <string name="service_stopped">Service stopped!</string>
    <string name="none">None</string>
    <string name="open_default_app">Open default app</string>
    <string name="choose_or_not">Choose app or open default one</string>
    <string name="choose_apps_summ">Switch off this preference to choose default app when headphones are plugged in</string>
    <string name="error">Error when starting default app</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="restart_service">Restart service</string>
    <string name="notification">Notification settings</string>
    <string name="show_notification">Show notification</string>
    <string name="show_notification_change">Show notification on volume change</string>
    <string name="about">About</string>
    <string name="visit_webpage">Visit my webpage</string>
    <string name="show_source_code">Show source code</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="cancel_default">Cancel default</string>
    <string name="no_problems">No problems found</string>
    <string name="cancel_default_toast">When settings activity is open, click button Clear Defaults</string>
    <string name="version">Version</string>
    <string name="volume">Volume settings</string>
    <string name="initial_volume">Initial volume</string>
    <string name="initial_volume_summary">Set volume level when headphones are plugged in</string>
    <string name="exit_volume">Exit volume</string>
    <string name="exit_volume_summary">Set volume level when headphones are plugged off</string>
    <string name="general_settings">General settings</string>

</resources>