<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="choose_apps"
        android:summary="@string/choose_apps_summ"
        android:title="@string/choose_or_not"/>

    <com.dvd.android.headphonelistener.preference.AppPickerPreference
        android:dependency="choose_apps"
        android:key="default_app"
        android:title="@string/open_default_app"
        app:showPackageName="true"/>

    <PreferenceCategory android:title="@string/notification">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification"
            android:title="@string/show_notification"/>

    </PreferenceCategory>

</PreferenceScreen>